tests/baselines/reference/es5-commonjs4.errors.txt
tests/cases/compiler/es5-commonjs4.ts(14,12): error TS1216: Identifier expected. '__esModule' is reserved as a marker for transpiled ES2015 module.


==== tests/cases/compiler/es5-commonjs4.ts (1 errors) ====
    
    export default class A
    {
        constructor ()
        {
    
        }
    
        public B()
        {
            return 42;
        }
    }
    export var __esModule = 1;
               ~~~~~~~~~~
!!! error TS1216: Identifier expected. '__esModule' is reserved as a marker for transpiled ES2015 module.
    